RESOLVED - # 70: Relative facts are not centered http://bugs.jaubart.com/view.php?id=70 RESOLVED - # 71: Towns not recognised in Change flags http://bugs.jaubart.com/view.php?id=71
git-svn-id: http://subversion.assembla.com/svn/webtrees-geneajaubart/trunk@16 2443a68c-d498-3b47-9643-c9de34c2b0bc

--- a/themes/rural/style.css
+++ b/themes/rural/style.css
@@ -1156,6 +1156,9 @@ html[dir='rtl'] .header_search {
 
 .rela {
 	opacity: 0.67;
+}
+
+#row_top .rela {
 	text-align: left;
 }
 
